Forgot to actually *call* ddclient.

--- a/cluster/infra/dnsupdate/domain-name-update.yaml
+++ b/cluster/infra/dnsupdate/domain-name-update.yaml
@@ -21,6 +21,7 @@ spec:
                   echo "login=${LOGIN}" >> ${DDCONFPATH}
                   echo "password=${PASSWORD}" >> ${DDCONFPATH}
                   echo "${DOMAIN}" >> ${DDCONFPATH}
+                  ddclient -daemon=0 -debug -verbose -noquiet
               env:
                 - name: DDCONFPATH
                   value: /etc/ddclient/ddclient.conf
